--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <nav class="navbar">
       <a href="#" class="nav-logo">Lend<b class="colored-text" style="font-weight: 900;">X</b></a>
 
-      <button class="deploy-menu-btn"><i class="ti ti-square-rounded-arrow-down-filled"></i> Ir a sección</button>
+      <button class="deploy-menu-btn">
+        <i class="ti ti-square-rounded-arrow-down-filled"></i>
+        
+        <ul class="m-nav-list">
+          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Conócenos</a></li>
+          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Servicios</a></li>
+          <li class="m-nav-list-item"><a href="#" class="m-nav-link">¿Por qué Elegirnos?</a></li>
+          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Contacto</a></li>
+        </ul>
+      </button>
 
       <ul class="nav-list">
         <li class="nav-item"><a href="#" class="nav-link">Conócenos</a></li>
@@ -119,8 +128,9 @@
             <li class="serv-list-item">Optimización SEO (Optimización para Motores de Busqueda).</li>
             <li class="serv-list-item">Optimización de Velocidad y Rendimiento.</li>
             <li class="serv-list-item">Entrega en 3 - 7 días hábiles.</li>
+            <li class="s-l-i-condition">Hosting y Dominio no incluidos</li>
           </ul>
-          <p class="serv-cond">Hosting y Dominio no incluidos</p>
+          <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
           <a href="#" class="serv-btn">Contratar Servicio</a>
         </div>
@@ -140,8 +150,9 @@
             <li class="serv-list-item">Optimización SEO (Optimización para Motores de Busqueda).</li>
             <li class="serv-list-item">Optimización de Velocidad y Rendimiento.</li>
             <li class="serv-list-item">Entrega en 7 - 10 días hábiles.</li>
+            <li class="s-l-i-condition">Hosting y Dominio no incluidos</li>
           </ul>
-          <p class="serv-cond">Hosting y Dominio no incluidos</p>
+          <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
           <a href="#" class="serv-btn">Contratar Servicio</a>
         </div>
@@ -173,8 +184,8 @@
                 regularmente, para que puedas recuperar tu página en caso de cualquier inconveniente.</li>
             </ul>
             <h2 class="serv2-price">
-              <div><b class="serv-price-symbols">$</b class="serv-price-symbols">29<b class="serv-price-symbols">.00/<b
-                    class="colored-text">mes</b></b class="serv-price-symbols"></div>
+              <div><b class="serv2-price-symbols">$</b class="serv2-price-symbols">29<b class="serv2-price-symbols">.00/<b
+                    class="colored-text">mes</b></b class="serv2-price-symbols"></div>
               <a href="#" class="serv2-btn">Contratar Servicio</a>
             </h2>
             <p class="serv2-p">Con nuestro servicio, puedes estar tranquilo sabiendo que tu Página Web están en manos
@@ -236,7 +247,7 @@
         <div class="reason2">
           <div class="reason2-num">
             <h1>4</h1>
-            <div class="reason2-name">
+            <div class="reason2-name r-4">
               <h3><i class="ti ti-star-filled colored-text"></i> Calidad y Profesionalismo</h3>
             </div>
           </div>
