--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <i class="ti ti-menu-4"></i>
           
         <ul class="m-nav-list">
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Conócenos</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Servicios</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">¿Por qué Elegirnos?</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Contacto</a></li>
+          <li class="m-nav-list-item"><a href="#conocenos" class="m-nav-link">Conócenos</a></li>
+          <li class="m-nav-list-item"><a href="#servicios" class="m-nav-link">Servicios</a></li>
+          <li class="m-nav-list-item"><a href="#pqe" class="m-nav-link">¿Por qué Elegirnos?</a></li>
+          <li class="m-nav-list-item"><a href="#contacto" class="m-nav-link">Contacto</a></li>
         </ul>
       </button>
 
       <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link">Conócenos</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">¿Por qué Elegirnos?</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+        <li class="nav-item"><a href="#conocenos" class="nav-link">Conócenos</a></li>
+        <li class="nav-item"><a href="#servicios" class="nav-link">Servicios</a></li>
+        <li class="nav-item"><a href="#pqe" class="nav-link">¿Por qué Elegirnos?</a></li>
+        <li class="nav-item"><a href="#contacto" class="nav-link">Contacto</a></li>
       </ul>
       <div class="nav-lenguage-toggle">
         <p>Idioma</p>
@@ -132,7 +132,7 @@
           </ul>
           <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
-          <a href="#" class="serv-btn">Contratar Servicio</a>
+          <a href="./hire-service-es.html" class="serv-btn">Contratar Servicio</a>
         </div>
 
         <div class="service">
@@ -154,7 +154,7 @@
           </ul>
           <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
-          <a href="#" class="serv-btn">Contratar Servicio</a>
+          <a href="./hire-service-es.html" class="serv-btn">Contratar Servicio</a>
         </div>
 
         <div class="monthly-service">
@@ -186,7 +186,7 @@
             <h2 class="serv2-price">
               <div><b class="serv2-price-symbols">US$</b class="serv2-price-symbols">29<b class="serv2-price-symbols">.00/<b
                     class="colored-text">mes</b></b class="serv2-price-symbols"></div>
-              <a href="#" class="serv2-btn">Contratar Servicio</a>
+              <a href="./hire-service-es.html" class="serv2-btn">Contratar Servicio</a>
             </h2>
             <p class="serv2-p">Con nuestro servicio, puedes estar tranquilo sabiendo que tu Página Web están en manos
               expertas, permitiéndote centrarte en hacer crecer tu negocio.</p>
@@ -265,7 +265,7 @@
           estamos listos para ayudarte a
           crear una presencia online profesional que impulse tu <b class="colored-text">Negocio</b> desde el primer
           clic.</p>
-        <a href="#" class="cta-btn">Contratar Servicio <i class="ti ti-direction-sign-filled colored-text"></i></a>
+        <a href="./hire-service-es.html" class="cta-btn">Contratar Servicio <i class="ti ti-direction-sign-filled colored-text"></i></a>
       </div>
     </section>
 
@@ -361,7 +361,7 @@
       </ul>
     </div>
 
-    <a href="#" class="f-cta-btn">Contratar Servicio <i class="ti ti-contract colored-text"></i></a>
+    <a href="./hire-service-es.html" class="f-cta-btn">Contratar Servicio <i class="ti ti-contract colored-text"></i></a>
   </footer>
 
 <script src="LendXapp.js"></script>
