--- a/hire-service-en.html
+++ b/hire-service-en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LendX - Contratar Servicio</title>
+  <title>LendX - Request Service</title>
   <link rel="stylesheet" href="LendXtyle.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
 </head>
@@ -12,28 +12,28 @@
 <body>
   <header class="header">
     <nav class="navbar">
-      <a href="#" class="nav-logo">Lend<b class="colored-text" style="font-weight: 900;">X</b></a>
+      <a href="./home-en.html" class="nav-logo">Lend<b class="colored-text" style="font-weight: 900;">X</b></a>
 
       <button class="deploy-menu-btn" id="deploy-menu-btn">
         <i class="ti ti-menu-4"></i>
 
         <ul class="m-nav-list">
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Conócenos</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Servicios</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">¿Por qué Elegirnos?</a></li>
-          <li class="m-nav-list-item"><a href="#" class="m-nav-link">Contacto</a></li>
+          <li class="m-nav-list-item"><a href="./home-en.html" class="m-nav-link">About Us</a></li>
+          <li class="m-nav-list-item"><a href="./home-en.html" class="m-nav-link">Services</a></li>
+          <li class="m-nav-list-item"><a href="./home-en.html" class="m-nav-link">¿Why Choose Us?</a></li>
+          <li class="m-nav-list-item"><a href="./home-en.html" class="m-nav-link">Contact</a></li>
         </ul>
       </button>
 
       <ul class="nav-list">
         <li class="nav-item"><a href="./index.html" class="nav-goback-btn"><i
-              class="ti ti-square-rounded-arrow-left-filled colored-text"></i> Volver a Inicio</a></li>
+              class="ti ti-square-rounded-arrow-left-filled colored-text"></i> Back to Home</a></li>
       </ul>
       <div class="nav-lenguage-toggle">
-        <p>Idioma</p>
+        <p>Lenguage</p>
         <ul class="nav-l-list">
-          <li class="nav-l-item"><a href="#" class="nav-l-btn"> <img src="./img/spain.png" alt="Español"></a></li>
-          <li class="nav-l-item"><a href="./hire-service-en.html" class="nav-l-btn"> <img src="./img/united-states.png" alt="English"></a>
+          <li class="nav-l-item"><a href="./hire-service-es.html" class="nav-l-btn"> <img src="./img/spain.png" alt="Español"></a></li>
+          <li class="nav-l-item"><a href="#" class="nav-l-btn"> <img src="./img/united-states.png" alt="English"></a>
           </li>
         </ul>
       </div>
@@ -44,21 +44,21 @@
   <div class="hire-container">
 
     <div class="hire-form">
-      <h1>Contratar Servicio <i class="ti ti-contract colored-text"></i></h1>
-      <p>Llena el siguiente formulario para solicitar el servicio que deseas.</p>
+      <h1>Request Service <i class="ti ti-contract colored-text"></i></h1>
+      <p>Fill out the form below to request the service you need.</p>
       <br>
       <div class="h-s-form-container">
         <form class="hs-form" id="hs-form" action="#">
           <div class="hs-section1">
 
             <div class="hs-name">
-              <label for="hs-name">Nombre y Apellido</label>
-              <input type="text" name="hs-name" id="hs-name" required placeholder="Nombre">
+              <label for="hs-name">Full Name</label>
+              <input type="text" name="hs-name" id="hs-name" required placeholder="Full Name">
             </div>
 
             <div class="hs-email">
-              <label for="hs-email">Correo Electrónico</label>
-              <input type="email" name="hs-email" id="hs-email" required placeholder="Ej. correo@mail.com">
+              <label for="hs-email">Email Address</label>
+              <input type="email" name="hs-email" id="hs-email" required placeholder="youremail@mail.com">
             </div>
 
           </div>
@@ -68,31 +68,31 @@
             <div class="hs-country">
               <div class="dropdown">
                 <div class="select">
-                  <span class="selected" id="hs-country">Selecciona tu País</span>
+                  <span class="selected" id="hs-country">Select your Country</span>
                   <div class="caret"><i class="ti ti-caret-down-filled"></i></div>
                 </div>
                 <ul class="menu invisible-scrollbar">
-                  <li class="active">Selecciona tu País</li>
-                  <li><img src="./img/country-menu-icons/espana.png" alt="España">España</li>
+                    <li class="active">Select your Country</li>
+                    <li><img src="./img/country-menu-icons/usa.png" alt="Estados Unidos">United States</li>
+                    <li><img src="./img/country-menu-icons/espana.png" alt="Spain">Spain</li>
                   <li><img src="./img/country-menu-icons/mexico.png" alt="Mexico">Mexico</li>
                   <li><img src="./img/country-menu-icons/colombia.png" alt="Colombia">Colombia</li>
                   <li><img src="./img/country-menu-icons/venezuela.png" alt="Venezuela">Venezuela</li>
                   <li><img src="./img/country-menu-icons/argentina.png" alt="Argentina">Argentina</li>
                   <li><img src="./img/country-menu-icons/uruguay.png" alt="Uruguay">Uruguay</li>
-                  <li><img src="./img/country-menu-icons/peru.png" alt="Perú">Perú</li>
+                  <li><img src="./img/country-menu-icons/peru.png" alt="Peru">Peru</li>
                   <li><img src="./img/country-menu-icons/ecuador.png" alt="Ecuador">Ecuador</li>
                   <li><img src="./img/country-menu-icons/bolivia.png" alt="Bolivia">Bolivia</li>
                   <li><img src="./img/country-menu-icons/paraguay.png" alt="Paraguay">Paraguay</li>
                   <li><img src="./img/country-menu-icons/Chile.png" alt="Chile">Chile</li>
                   <li><img src="./img/country-menu-icons/el-salvador.png" alt="El Salvador">El Salvador</li>
-                  <li><img src="./img/country-menu-icons/panama.png" alt="Panamá">Panamá</li>
-                  <li><img src="./img/country-menu-icons/dominican-republic.png" alt="Rep. Dominicana">Rep. Dominicana
+                  <li><img src="./img/country-menu-icons/panama.png" alt="Panama">Panama</li>
+                  <li><img src="./img/country-menu-icons/dominican-republic.png" alt="Rep. Dominicana">Dominican Rep.
                   </li>
                   <li><img src="./img/country-menu-icons/puerto-rico.png" alt="Puerto Rico">Puerto Rico</li>
                   <li><img src="./img/country-menu-icons/guatemala.png" alt="Guatemala">Guatemala</li>
                   <li><img src="./img/country-menu-icons/honduras.png" alt="Honduras">Honduras</li>
                   <li><img src="./img/country-menu-icons/costa-rica.png" alt="Costa Rica">Costa Rica</li>
-                  <li><img src="./img/country-menu-icons/usa.png" alt="Estados Unidos">Estados Unidos</li>
                 </ul>
               </div>
             </div>
@@ -100,23 +100,23 @@
             <div class="hs-service">
               <div class="dropdown">
                 <div class="select">
-                  <span class="selected" id="hs-service">Selecciona el Servicio</span>
+                  <span class="selected" id="hs-service">Choose a Service</span>
                   <div class="caret"><i class="ti ti-caret-down-filled"></i></div>
                 </div>
                 <ul class="menu invisible-scrollbar">
-                  <li class="active">Selecciona el Servicio</li>
-                  <li>Desarrollo de Landing Page - <b class="colored-text">US$ 289.00</b></li>
-                  <li>Desarrollo de Sitio Web - <b class="colored-text">US$ 499.00</b></li>
+                  <li class="active">Choose a Service</li>
+                  <li>Landing Page Development - <b class="colored-text">US$ 289.00</b></li>
+                  <li>Website Development - <b class="colored-text">US$ 499.00</b></li>
                 </ul>
               </div>
             </div>
 
             <div class="extra-service">
               <input type="checkbox" name="extra" id="extra-service">
-              <label for="extra">Hosting, Dominio y Mantenimiento para tu Web - <b class="colored-text">US$
-                  29.00</b>/mes
+              <label for="extra">Hosting, Domain & Maintenance for Your Website - <b class="colored-text">US$
+                  29.00</b>/mo
                 <i class="ti ti-help">
-                  <p class="extra-service-info">Con este Servicio aseguras un optimo funcionamiento para tu Página Web y la posibilidad de hacer cambios o actualizaciones en el futuro sin cargo alguno.</p>
+                    <p class="extra-service-info">This service ensures optimal performance for your website and allows you to request updates or changes in the future at no additional cost.</p>
                 </i>
               </label>
             </div>
@@ -124,11 +124,11 @@
             <div class="hs-payment-method">
               <div class="dropdown">
                 <div class="select">
-                  <span class="selected" id="hs-payment">Elige un Método de Pago</span>
+                  <span class="selected" id="hs-payment">Choose a Payment Method</span>
                   <div class="caret"><i class="ti ti-caret-down-filled"></i></div>
                 </div>
                 <ul class="menu invisible-scrollbar">
-                  <li class="active">Elige un Método de Pago</li>
+                  <li class="active">Choose a Payment Method</li>
                   <li><img src="./img/payment-methods-icons/paypal.png" alt="Paypal">Paypal</li>
                   <li><img src="./img/payment-methods-icons/binance.png" alt="Binance"> Binance Pay</li>
                 </ul>
@@ -138,7 +138,7 @@
           </div>
 
           <br>
-          <button type="submit" class="submit-btn" id="submit-btn">Enviar Solicitud</button>
+          <button type="submit" class="submit-btn" id="submit-btn">Submit Request</button>
 
         </form>
 
@@ -148,41 +148,41 @@
 
     <div class="imp-info">
       <div class="service-summary-container">
-        <h1>Resumen de Solicitud</h1>
+        <h1>Request Summary</h1>
 
         <div class="summary-section1">
           <div class="req-info1">
-            <h4>Nombre:</h4>
-            <p id="r-f-name">Escribe tu Nombre</p>
+            <h4>Full Name:</h4>
+            <p id="r-f-name">Enter your Full Name</p>
           </div>
 
           <div class="req-info2">
-            <h4>Correo Elecrónico:</h4>
-            <p id="r-e-email">Escribe tu Correo</p>
+            <h4>Email Address:</h4>
+            <p id="r-e-email">Enter your Email</p>
           </div>
 
           <div class="req-info3">
-            <h4>País:</h4>
-            <p id="r-c-country">Selecciona tu Pais</p>
+            <h4>Country:</h4>
+            <p id="r-c-country">Enter your Country</p>
           </div>
         </div>
 
 
         <div class="req-info4">
-          <h4>Servicio Solicitado:</h4>
+          <h4>Requested Service:</h4>
           <ul class="req-service-list" id="req-service-list">
-            Selecciona un Servicio
+            Choose a Service
           </ul>
           <br>
         </div>
 
-        <h4 class="req-service-title">Hosting, Dominio y Mantenimiento</h4>
+        <h4 class="req-service-title">Hosting, Domain and Maintenance</h4>
         <p id="extraserv-value">No</p>
 
         <br>
         <div class="req-info5">
-          <h4>Método de Pago</h4>
-          <p id="r-pm-paymethod">Elige un Método de Pago.</p>
+          <h4>Payment Method</h4>
+          <p id="r-pm-paymethod">Choose a Payment Method</p>
         </div>
       </div>
 
@@ -190,22 +190,18 @@
 
     <div class="disclaimer-container" id="disc-container">
       <div class="disc-text disc-text_active">
-        <h1><i class="ti ti-alert-circle-filled colored-text"></i> Importante sobre el proceso de contratación</h1>
+        <h1><i class="ti ti-alert-circle-filled colored-text"></i> Important Information About the Service Request Process</h1>
         <br>
         <div>
-          <p>Para comenzar con el desarrollo del servicio solicitado, se requiere un pago inicial del <b>50%</b> del
-            total.
-            El 50% restante se abona al momento de la <b>entrega final del proyecto</b>.</p>
+          <p>To begin working on the requested service, an initial payment of <b>50% of the total is required</b>. The remaining 50% is due upon <b>final delivery of the project</b>.</p>
           <br>
-          <h3>¿Porque lo hacemos de esta manera?</h3>
-          <p>Este método nos permite asegurar el compromiso de ambas partes y garantiza que podamos asignar los recursos
-            necesarios desde el inicio, manteniendo un servicio profesional, transparente y de calidad.</p>
+          <h3>¿Why do we do it this way?</h3>
+          <p>This approach ensures commitment from both sides and allows us to allocate the necessary resources from the start, providing a professional, transparent, and high-quality service.</p>
           <br>
-          <p>Una vez recibido tu formulario, nos pondremos en contacto contigo lo antes posible para confirmar los
-            detalles y coordinar el inicio del trabajo.</p>
+          <p>Once we receive your request, we'll contact you as soon as possible to confirm the details and coordinate the start of your project.</p>
         </div>
         <br>
-        <button class="disc-agree-btn" id="agree-button">Estoy de acuerdo</button>
+        <button class="disc-agree-btn" id="agree-button">i agree</button>
       </div>
     </div>
 
@@ -214,24 +210,24 @@
   <div class="form-message-loading">
     <div class="loader"></div>
     <div class="form-message">
-      <h3>Enviando...</h3>
-      <p>Este proceso puede tardar unos segundos.</p>
+      <h3>Sending...</h3>
+      <p>This process may take a few seconds.</p>
     </div>
   </div>
   <div class="form-message-success">
     <div class="success-icon"><i class="ti ti-square-rounded-check-filled"></i></div>
     <div class="success-text">
-      <h3>Listo!</h3>
-      <p>Tu Solicitud se envió correctamente.</p>
+      <h3>Done!</h3>
+      <p>Your request was sent successfully.</p>
     </div>
     <button class="success-btn" id="success-btn">OK</button>
   </div>
   <div class="form-message-error">
     <div class="error-icon"><i class="ti ti-alert-triangle-filled"></i></div>
     <div class="error-text">
-      <h3>Oh no!</h3>
-      <p>Parece que hubo error, intenta de nuevo.</p>
-      <p class="error-help">Si el error persiste, puedes enviar tu solicitud a: <b>lendxweb@protonmail.com</b></p>
+      <h3>Oops!</h3>
+      <p>Something went wrong. Please try again.</p>
+      <p class="error-help">If the error continues, you can send your request to: <b>lendxweb@protonmail.com</b></p>
     </div>
     <button class="error-btn" id="error-btn">OK</button>
   </div>
@@ -242,7 +238,7 @@
     </div>
 
     <div class="footer-social-media">
-      <h4>Redes Sociales</h4>
+      <h4>Social Media</h4>
       <div class="f-sm-btn-container">
         <a href="#" class="sm-btn"><i class="ti ti-brand-instagram"></i></a>
         <a href="#" class="sm-btn"><i class="ti ti-brand-facebook"></i></a>
@@ -250,12 +246,12 @@
     </div>
 
     <div class="footer-sections">
-      <h4>Secciones</h4>
+      <h4>Sections</h4>
       <ul class="f-list">
-        <li class="f-list-item"><a href="./index.html" class="f-link">Conónecos</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">Servicios</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">¿Por qué Elegirnos?</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">Contacto</a></li>
+        <li class="f-list-item"><a href="./index.html" class="f-link">About Us</a></li>
+        <li class="f-list-item"><a href="./index.html" class="f-link">Services</a></li>
+        <li class="f-list-item"><a href="./index.html" class="f-link">¿Why Choose Us?</a></li>
+        <li class="f-list-item"><a href="./index.html" class="f-link">Contact</a></li>
       </ul>
     </div>
 
