--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Idioma</p>
         <ul class="nav-l-list">
           <li class="nav-l-item"><a href="#" class="nav-l-btn"> <img src="./img/spain.png" alt="Español"></a></li>
-          <li class="nav-l-item"><a href="#" class="nav-l-btn"> <img src="./img/united-states.png" alt="English"></a>
+          <li class="nav-l-item"><a href="./home-en.html" class="nav-l-btn"> <img src="./img/united-states.png" alt="English"></a>
           </li>
         </ul>
       </div>
@@ -132,7 +132,7 @@
           </ul>
           <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
-          <a href="./hire-service-es.html" class="serv-btn">Contratar Servicio</a>
+          <a href="./hire-service-es.html" class="serv-btn">Solicitar Servicio</a>
         </div>
 
         <div class="service">
@@ -154,7 +154,7 @@
           </ul>
           <!-- <p class="serv-cond">Hosting y Dominio no incluidos</p> -->
           <br>
-          <a href="./hire-service-es.html" class="serv-btn">Contratar Servicio</a>
+          <a href="./hire-service-es.html" class="serv-btn">Solicitar Servicio</a>
         </div>
 
         <div class="monthly-service">
@@ -186,7 +186,7 @@
             <h2 class="serv2-price">
               <div><b class="serv2-price-symbols">US$</b class="serv2-price-symbols">29<b class="serv2-price-symbols">.00/<b
                     class="colored-text">mes</b></b class="serv2-price-symbols"></div>
-              <a href="./hire-service-es.html" class="serv2-btn">Contratar Servicio</a>
+              <a href="./hire-service-es.html" class="serv2-btn">Solicitar Servicio</a>
             </h2>
             <p class="serv2-p">Con nuestro servicio, puedes estar tranquilo sabiendo que tu Página Web están en manos
               expertas, permitiéndote centrarte en hacer crecer tu negocio.</p>
@@ -265,7 +265,7 @@
           estamos listos para ayudarte a
           crear una presencia online profesional que impulse tu <b class="colored-text">Negocio</b> desde el primer
           clic.</p>
-        <a href="./hire-service-es.html" class="cta-btn">Contratar Servicio <i class="ti ti-direction-sign-filled colored-text"></i></a>
+        <a href="./hire-service-es.html" class="cta-btn">Comienza ahora<i class="ti ti-direction-sign-filled colored-text"></i></a>
       </div>
     </section>
 
@@ -354,14 +354,14 @@
     <div class="footer-sections">
       <h4>Secciones</h4>
       <ul class="f-list">
-        <li class="f-list-item"><a href="#" class="f-link">Conónecos</a></li>
-        <li class="f-list-item"><a href="#" class="f-link">Servicios</a></li>
-        <li class="f-list-item"><a href="#" class="f-link">¿Por qué Elegirnos?</a></li>
-        <li class="f-list-item"><a href="#" class="f-link">Contacto</a></li>
+        <li class="f-list-item"><a href="#conocenos" class="f-link">Conónecos</a></li>
+        <li class="f-list-item"><a href="#servicios" class="f-link">Servicios</a></li>
+        <li class="f-list-item"><a href="#pqe" class="f-link">¿Por qué Elegirnos?</a></li>
+        <li class="f-list-item"><a href="#contacto" class="f-link">Contacto</a></li>
       </ul>
     </div>
 
-    <a href="./hire-service-es.html" class="f-cta-btn">Contratar Servicio <i class="ti ti-contract colored-text"></i></a>
+    <a href="./hire-service-es.html" class="f-cta-btn">Solicitar Servicio <i class="ti ti-contract colored-text"></i></a>
   </footer>
 
 <script src="LendXapp.js"></script>
