--- a/hire-service-en.html
+++ b/hire-service-en.html
@@ -26,7 +26,7 @@
       </button>
 
       <ul class="nav-list">
-        <li class="nav-item"><a href="./index.html" class="nav-goback-btn"><i
+        <li class="nav-item"><a href="./home-en.html" class="nav-goback-btn"><i
               class="ti ti-square-rounded-arrow-left-filled colored-text"></i> Back to Home</a></li>
       </ul>
       <div class="nav-lenguage-toggle">
@@ -234,7 +234,7 @@
 
   <footer>
     <div class="footer-logo-container">
-      <a class="f-logo" href="./index.html">Lend<b class="colored-text">X</b></a>
+      <a class="f-logo" href="./home-en.html">Lend<b class="colored-text">X</b></a>
     </div>
 
     <div class="footer-social-media">
@@ -248,10 +248,10 @@
     <div class="footer-sections">
       <h4>Sections</h4>
       <ul class="f-list">
-        <li class="f-list-item"><a href="./index.html" class="f-link">About Us</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">Services</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">¿Why Choose Us?</a></li>
-        <li class="f-list-item"><a href="./index.html" class="f-link">Contact</a></li>
+        <li class="f-list-item"><a href="./home-en.html" class="f-link">About Us</a></li>
+        <li class="f-list-item"><a href="./home-en.html" class="f-link">Services</a></li>
+        <li class="f-list-item"><a href="./home-en.html" class="f-link">¿Why Choose Us?</a></li>
+        <li class="f-list-item"><a href="./home-en.html" class="f-link">Contact</a></li>
       </ul>
     </div>
 
